<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:showAsAction="never"
        app:showAsAction="always"/>
    <item android:id="@+id/action_helpmod"
        android:icon="@drawable/ic_module_help_black_24dp"
        android:showAsAction="never"
        app:showAsAction="always"/>
    <item android:id="@+id/action_print"
        android:icon="@drawable/ic_print_black_24dp"
        android:showAsAction="never"
        app:showAsAction="always"/>
    <item android:id="@+id/load_prog"
        android:title="@string/load_prog"
        android:showAsAction="never"
        app:showAsAction="never"/>
    <item android:id="@+id/save_program_as"
        android:title="@string/save_program_as"
        android:showAsAction="never"
        app:showAsAction="never"/>
    <item android:id="@+id/import_data"
        android:title="@string/import_data"
        android:showAsAction="never"
        app:showAsAction="never"/>
    <item android:id="@+id/export_data"
        android:title="@string/export_data"
        android:showAsAction="ifRoom"
        app:showAsAction="never"/>
    <item android:id="@+id/show_overlay"
        android:title="@string/show_overlay"
        android:showAsAction="never"
        app:showAsAction="never"/>
    <item android:id="@+id/opt_feedback"
        android:title="@string/opt_feedback"
        android:showAsAction="never"
        app:showAsAction="never"/>
    <item android:id="@+id/about_me"
        android:title="@string/about_me"
        app:showAsAction="never"/>
    <item android:id="@+id/turn_off"
        android:title="@string/turn_off"
        app:showAsAction="never" />
</menu>
